# edu-guard-demo

./: .gitignore  =0.1.6  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: educhain.py  guardrails.py  llm_client.py  main.py  vector_index.py
tests/: test_educhain.py  test_guardrails.py  test_llm_client.py  test_vector_index.py
