[tool.poetry]
name = "edu-guard-demo"
version = "0.1.0"
description = ""
authors = ["Artem Shishkin <verter25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
llama-index = ">=0.10.22"
openai = ">=1.14.0"
chromadb = ">=0.4.24"
together = ">=0.1.0"
python-dotenv = ">=1.0.1"
httpx = ">=0.27.0"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
langchain = "^0.3.25"
langchain-community = "^0.3.24"
langchain-openai = "^0.3.19"
llama-index-vector-stores-chroma = "^0.4.2"
langchain-together = "^0.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
